Fix spacing

--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -49,11 +49,12 @@ button {
 
   h1 {
     font-size: 24px;
+    margin-bottom: 24px;
   }
 
   ul {
     list-style: none;
-    margin-bottom: 20px;
+    margin-bottom: 32px;
   }
 
   li {
@@ -113,14 +114,6 @@ button {
 
     font-size: 16px;
     text-align: center;
-
-    h1 {
-      margin-bottom: 32px;
-    }
-
-    ul {
-      margin-bottom: 32px;
-    }
   }
 
   #join-waitlist {
